# denali

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  build.zig  build.zig.zon  flake.nix  meson.build
bindings/rust/: Cargo.toml
bindings/rust/denali/: Cargo.toml
bindings/rust/denali-sys/: Cargo.toml  build.rs
bindings/rust/denali-sys/examples/: simple.rs
bindings/rust/denali-sys/src/: lib.rs
bindings/zig/example/: build.zig  build.zig.zon  main.zig
bindings/zig/examples/: build.zig  build.zig.zon  simple.zig
bindings/zig/src/: root.zig
examples/: meson.build  simple.c
examples/simple/: main.c  meson.build
include/: defines.h  defines_priv.h  display.h  display_priv.h  list.h  message.h  message_protocol.h  protocol.h  registry.h  vector.h  window.h  window_priv.h
include/dwl/: defines.h  display.h  display_core.h  protocol.h  window.h  window_core.h
include/wl/: display.h  display_core.h
src/: compositor.c  display.c  list.c  meson.build  message.c  registry.c  shell.c  window.c
tests/: list.c  meson.build  vector.c
